Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,50 +34,67 @@
         <h3>
 <a id="hello-everyone" class="anchor" href="#hello-everyone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello everyone.</h3>
 
-<p>My name is Nikola Naumov and i am Web Designer and Web Developer living in Walthamstow, London.</p>
+<h1>
+<a id="my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" class="anchor" href="#my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My name is Nikola Naumov and i am Web Designer and Web Developer living in Walthamstow, London.</h1>
+
+<h2>
+<a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WORK EXPERIENCE</h2>
 
 <h3>
-<a id="work-experience" class="anchor" href="#work-experience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WORK EXPERIENCE</h3>
+<a id="web-designer-and-web-developer" class="anchor" href="#web-designer-and-web-developer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Web designer and web developer</h3>
 
-<p>Web Designer and Web Developer
-Cube12 Design - Plovdiv, Bulgaria - February 2014 to August 2016
-Duties included: Design and develop websites for our customers, implement custom functionalities, maintain updates and optimization. Implementation of external services such as Paypal, DHL, eMag integration etc Development of eCommerce websites, Portfolio websites, Event websites, Local listing websites and even Facebook Gallery websites for nightclub owners.
+<p><strong>Cube12 Design</strong> - Plovdiv, Bulgaria<br>
+<strong>Duties included:</strong> Design and develop websites for our customers, implement custom functionalities, maintain updates and optimization. Implementation of external services such as Paypal, DHL, eMag integration etc Development of eCommerce websites, Portfolio websites, Event websites, Local listing websites and even Facebook Gallery websites for nightclub owners.<br>
 Graphic design of logos, business cards, flyers, restaurant menus, signs and even mobile apps.
-In this role I have contact with the business owners and managers and have the opportunity to understand how people look at the business.
-Skills developed: Team work, working with our clients and communicate politely and efficiently, also working strictly with deadlines.
-Portfolio: <a href="https://cube12.net/portfolios/">https://cube12.net/portfolios/</a>
-Other work experience
-Bartender
-"SINATRA" - June 2009 to February 2014
-Duties included:
-Skills developed:
-Other work experience
-VOIP gateway manager
-"EXPRESS LINK MOBILE" - July 2006 to June 2009
-Duties included: Supporting the system in operation and daily routine tasks connected with the process, such as checking for bad connection channels and optimizing the resource in use; developing daily check-list for activity done and incomes.
-Skills developed: Understanding the way system for Internet calls works. Ready to operate with systems like ECOTEL Vierling GATEWAYS and SIM MANAGMENT SERVERS.
-IT and Language skills
-IT:
-Proficient in: Adobe Photoshop CC, Adobe Illustrator CC, Adobe InDesign CC, AutoCad 2015
-Known programming languages: HTML, CSS 
-Basic knowledge of: JavaScript, Angular JS, SASS
-Known CMS Platforms: Wordpress, Prestashop, Joomla
-Known web tools: Chrome Development console, Google Analytics, Google Adwords, Google Pagespeed
-Insight, Google Webmaster tools, Cpanel
-Proficient in Windows programs - Word, Excel, Power point, Access.
-Intermediate Linux server knowledge.
-Certificate from Digital Garage - Online Marketing Fundamentals</p>
+In this role I have contact with the business owners and managers and have the opportunity to understand how people look at the business.<br>
+<strong>Skills developed:</strong> Team work, working with our clients and communicate politely and efficiently, also working strictly with deadlines.  </p>
+
+<p><strong>Portfolio:</strong> <a href="https://cube12.net/portfolios/">https://cube12.net/portfolios/</a></p>
+
+<hr>
+
+<p>Other work experience</p>
+
+<h3>
+<a id="voip-gateway-manager" class="anchor" href="#voip-gateway-manager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VOIP gateway manager</h3>
+
+<p><strong>EXPRESS LINK MOBILE</strong> - Plovdiv, Bulgaria<br>
+<strong>Duties included:</strong> Supporting the system in operation and daily routine tasks connected with the process, such as checking for bad connection channels and optimizing the resource in use; developing daily check-list for activity done and incomes.
+Skills developed: Understanding the way system for Internet calls works. Ready to operate with systems like ECOTEL Vierling GATEWAYS and SIM MANAGMENT SERVERS.  </p>
+
+<hr>
+
+<h2>
+<a id="it-skills" class="anchor" href="#it-skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IT skills:</h2>
+
+<p><strong>Proficient in:</strong> Adobe Photoshop CC, Adobe Illustrator CC, Adobe InDesign CC, AutoCad 2015
+<strong>Known programming languages:</strong> HTML, CSS 
+<strong>Basic knowledge of:</strong> JavaScript, Angular JS, SASS
+<strong>Known CMS Platforms:</strong> Wordpress, Prestashop, Joomla
+<strong>Known web tools:</strong> Chrome Development console, Google Analytics, Google Adwords, Google Pagespeed Insight, Google Webmaster tools, Cpanel<br>
+<strong>Proficient in Windows programs:</strong> Word, Excel, Power point, Access.<br>
+Intermediate Linux server knowledge.</p>
 
 <h3>
 <a id="links" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LINKS</h3>
 
-<p><a href="https://cube12.net/portfolios">https://cube12.net/portfolios</a>
-<a href="https://www.linkedin.com/in/nikola-naumov-web-design">https://www.linkedin.com/in/nikola-naumov-web-design</a></p>
+<p>*<a href="https://cube12.net/portfolios">https://cube12.net/portfolios</a>
+*<a href="https://www.linkedin.com/in/nikola-naumov-web-design">https://www.linkedin.com/in/nikola-naumov-web-design</a></p>
 
 <h3>
 <a id="certifications" class="anchor" href="#certifications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CERTIFICATIONS</h3>
 
-<p>Digital Garage - The online marketing fundamentals</p>
+<p><strong>Digital Garage</strong> - The online marketing fundamentals</p>
+
+<hr>
+
+<h2>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact me</h2>
+
+<ul>
+<li>+447447703306</li>
+<li>nikola.naumov87[at]gmail.com</li>
+</ul>
       </section>
     </div>
 
