Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ In this role I have contact with the business owners and managers and have the o
 <a id="voip-gateway-manager" class="anchor" href="#voip-gateway-manager" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VOIP gateway manager</h3>
 
 <p><strong>EXPRESS LINK MOBILE</strong> - Plovdiv, Bulgaria<br>
-<strong>Duties included:</strong> Supporting the system in operation and daily routine tasks connected with the process, such as checking for bad connection channels and optimizing the resource in use; developing daily check-list for activity done and incomes.
-Skills developed: Understanding the way system for Internet calls works. Ready to operate with systems like ECOTEL Vierling GATEWAYS and SIM MANAGMENT SERVERS.  </p>
+<strong>Duties included:</strong> Supporting the system in operation and daily routine tasks connected with the process, such as checking for bad connection channels and optimizing the resource in use; developing daily check-list for activity done and incomes.<br>
+<strong>Skills developed:</strong> Understanding the way system for Internet calls works. Ready to operate with systems like ECOTEL Vierling GATEWAYS and SIM MANAGMENT SERVERS.  </p>
 
 <hr>
 
 <h2>
-<a id="it-skills" class="anchor" href="#it-skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IT skills:</h2>
+<a id="it-skills" class="anchor" href="#it-skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IT SKILLS</h2>
 
 <p><strong>Proficient in:</strong> Adobe Photoshop CC, Adobe Illustrator CC, Adobe InDesign CC, AutoCad 2015
 <strong>Known programming languages:</strong> HTML, CSS 
@@ -78,8 +78,10 @@ Intermediate Linux server knowledge.</p>
 <h3>
 <a id="links" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LINKS</h3>
 
-<p>*<a href="https://cube12.net/portfolios">https://cube12.net/portfolios</a>
-*<a href="https://www.linkedin.com/in/nikola-naumov-web-design">https://www.linkedin.com/in/nikola-naumov-web-design</a></p>
+<ul>
+<li><a href="https://cube12.net/portfolios">https://cube12.net/portfolios</a></li>
+<li><a href="https://www.linkedin.com/in/nikola-naumov-web-design">https://www.linkedin.com/in/nikola-naumov-web-design</a></li>
+</ul>
 
 <h3>
 <a id="certifications" class="anchor" href="#certifications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CERTIFICATIONS</h3>
