--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ In this role I have contact with the business owners and managers and have the o
 <h2>
 <a id="it-skills" class="anchor" href="#it-skills" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>IT SKILLS</h2>
 
-<p><strong>Proficient in:</strong> Adobe Photoshop CC, Adobe Illustrator CC, Adobe InDesign CC, AutoCad 2015
-<strong>Known programming languages:</strong> HTML, CSS 
-<strong>Basic knowledge of:</strong> JavaScript, Angular JS, SASS
-<strong>Known CMS Platforms:</strong> Wordpress, Prestashop, Joomla
+<p><strong>Proficient in:</strong> Adobe Photoshop CC, Adobe Illustrator CC, Adobe InDesign CC, AutoCad 2015<br>
+<strong>Known programming languages:</strong> HTML, CSS<br>
+<strong>Basic knowledge of:</strong> JavaScript, Angular JS, SASS<br>
+<strong>Known CMS Platforms:</strong> Wordpress, Prestashop, Joomla<br>
 <strong>Known web tools:</strong> Chrome Development console, Google Analytics, Google Adwords, Google Pagespeed Insight, Google Webmaster tools, Cpanel<br>
 <strong>Proficient in Windows programs:</strong> Word, Excel, Power point, Access.<br>
 Intermediate Linux server knowledge.</p>
@@ -91,7 +91,7 @@ Intermediate Linux server knowledge.</p>
 <hr>
 
 <h2>
-<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact me</h2>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CONTACT ME</h2>
 
 <ul>
 <li>+447447703306</li>
