--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
+ <script src="//threejs.org/build/three.min.js"></script>
+
+  <script src="/javascripts/main.js"></script>
   <body>
     <div class="wrapper">
       <header>
