--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
     <meta name="theme-color" content="#202020">
+    
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
  <script src="//threejs.org/build/three.min.js"></script>
 
-
+<?php include_once("php/analytics.php") ?>
   <body>
     <div class="wrapper">
       <header>
