--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
     <meta name="theme-color" content="#202020">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
     
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
  <script src="//threejs.org/build/three.min.js"></script>
-
-<?php include_once("php/analytics.php") ?>
+  <script src="javascripts/analytics.js"></script>
   <body>
     <div class="wrapper">
       <header>
