--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
       <section>
         <h3>
-<a id="hello-everyone" class="anchor" href="#hello-everyone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello everyone.</h3>
+<a id="hello-everyone" class="anchor" href="#hello-everyone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hey there,</h3>
 
 <h1>
 <a id="my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" class="anchor" href="#my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My name is Nikola Naumov and i am Web Designer and Web Developer living in Walthamstow, London.</h1>
@@ -84,9 +84,17 @@ Intermediate Linux server knowledge.</p>
 <a id="certifications" class="anchor" href="#certifications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CERTIFICATIONS</h3>
 
 <p><strong>Digital Garage</strong> - The online marketing fundamentals</p>
+<h3>
+  
+<a id="other" class="anchor" href="#other" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OTHER</h3>
+
+<p><strong>Driving license:</strong>Categories A, B</p>
+<hr>
+<h2>INTERESTS
+<a id="interests" class="anchor" href="#interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Interests</h2>
+<p>In my spare time I enjoy Arduino Projects and dealing with ARM development boards such as Raspberry Pi and competitives, listening to music and traveling.</p>
 
 <hr>
-
 <h2>
 <a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CONTACT ME</h2>
 
