--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
         <h1>Nikola Naumov.com</h1>
         <p>Nikola Naumov&#39;s personal website</p>
     <script src="//threejs.org/build/three.min.js"></script>
-  <script src="javascripts/analytics.js"></script>
+  <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-88075703-1', 'auto');
+  ga('send', 'pageview');
+
+        </script>
        
       </header>
       <section>
