--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a id="hello-everyone" class="anchor" href="#hello-everyone" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hey there,</h3>
 
 <h1>
-<a id="my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" class="anchor" href="#my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My name is Nikola Naumov and i am Web Designer and Web Developer living in Walthamstow, London.</h1>
+<a id="my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" class="anchor" href="#my-name-is-nikola-naumov-and-i-am-web-designer-and-web-developer-living-in-walthamstow-london" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My name is Nikola Naumov and i am Web Designer and Web Developer living in Barnet, London.</h1>
 
 <h2>
   <hr>
